--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^7.0.0",
     "mysql2": "^3.14.1",
     "next": "15.3.4",
     "react": "^19.0.0",
